# computer2mqtt

./: .envrc  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  README.md  computer2mqtt-example.yaml  pyproject.toml
.github/workflows/: job-pre-commit.yml  job-prek.yml  job-test.yml  on-merge.yml  on-pr.yml
computer2mqtt/: app.py
src/computer2mqtt/: __init__.py
tests/: test_example.py
